# python-package-exercise-project-3-team-1

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/pyarithmetictrainer/: __main__.py  wisdom.py
src/team1ArithmeticTrainer/: __main__.py  example.py  functions.py
tests/: test.py  test_functions.py
