[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arithmeticTrainer"
description = "A package meant to train mental math and basic arithmetic"
version = "0.0.1"
authors = [
  { name="Kevin Gong", email="kxg202@nyu.edu" },
  { name="Dixit Timilsina", email="dt1930@nyu.edu" },
  { name="James Liu", email="sl7059@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-1"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-1.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-1/issues"

[project.scripts]
functions = "functions.__main__:main"